generated/RapidParser.cpp

// Generated from Rapid.g4 by ANTLR 4.13.2


#include "RapidVisitor.h"

#include "RapidParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct RapidParserStaticData final {
  RapidParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  RapidParserStaticData(const RapidParserStaticData&) = delete;
  RapidParserStaticData(RapidParserStaticData&&) = delete;
  RapidParserStaticData& operator=(const RapidParserStaticData&) = delete;
  RapidParserStaticData& operator=(RapidParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag rapidParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<RapidParserStaticData> rapidParserStaticData = nullptr;

void rapidParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (rapidParserStaticData != nullptr) {
    return;
  }
#else
  assert(rapidParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<RapidParserStaticData>(
    std::vector<std::string>{
      "rapidModule", "moduleDeclaration", "moduleAttributeList", "moduleAttribute", 
      "dataDeclaration", "dataType", "arrayDimension", "arrayDimExpr", "routineDeclaration", 
      "procedureDeclaration", "functionDeclaration", "trapDeclaration", 
      "routineAttribute", "parameterList", "parameter", "arrayPlaceholder", 
      "statement", "assignmentStatement", "procedureCallStatement", "argumentList", 
      "argument", "namedOrPositionalExpr", "switchExpr", "moveAbsJStatement", 
      "moveCStatement", "moveJStatement", "moveLStatement", "ifStatement", 
      "forStatement", "whileStatement", "testStatement", "returnStatement", 
      "exitStatement", "gotoStatement", "labelStatement", "connectStatement", 
      "raiseStatement", "retryStatement", "tryNextStatement", "expression", 
      "functionCall", "variableReference", "aggregate", "literal"
    },
    std::vector<std::string>{
      "", "'('", "','", "')'", "':='", "';'", "'{'", "'}'", "'*'", "'\\'", 
      "':'", "'-'", "'+'", "'/'", "'='", "'<>'", "'<'", "'>'", "'<='", "'>='", 
      "'.'", "'['", "']'", "'AND'", "'BACKWARD'", "'CASE'", "'CONNECT'", 
      "'CONST'", "'DEFAULT'", "'DIV'", "'DO'", "'ELSE'", "'ELSEIF'", "'ENDFOR'", 
      "'ENDFUNC'", "'ENDIF'", "'ENDMODULE'", "'ENDPROC'", "'ENDTEST'", "'ENDTRAP'", 
      "'ENDWHILE'", "'ERROR'", "'EXIT'", "'FALSE'", "'FOR'", "'FROM'", "'FUNC'", 
      "'GOTO'", "'IF'", "'INOUT'", "'LOCAL'", "'MOD'", "'MODULE'", "'NOSTEPIN'", 
      "'NOT'", "'NOVIEW'", "'OR'", "'PERS'", "'PROC'", "'RAISE'", "'READONLY'", 
      "'RETRY'", "'RETURN'", "'STEP'", "'SYSMODULE'", "'TEST'", "'THEN'", 
      "'TO'", "'TRAP'", "'TRUE'", "'TRYNEXT'", "'VAR'", "'VIEWONLY'", "'WHILE'", 
      "'WITH'", "'XOR'", "", "", "'MoveAbsJ'", "'MoveC'", "'MoveJ'", "'MoveL'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "AND", "BACKWARD", "CASE", "CONNECT", "CONST", 
      "DEFAULT", "DIV", "DO", "ELSE", "ELSEIF", "ENDFOR", "ENDFUNC", "ENDIF", 
      "ENDMODULE", "ENDPROC", "ENDTEST", "ENDTRAP", "ENDWHILE", "ERROR", 
      "EXIT", "FALSE", "FOR", "FROM", "FUNC", "GOTO", "IF", "INOUT", "LOCAL", 
      "MOD", "MODULE", "NOSTEPIN", "NOT", "NOVIEW", "OR", "PERS", "PROC", 
      "RAISE", "READONLY", "RETRY", "RETURN", "STEP", "SYSMODULE", "TEST", 
      "THEN", "TO", "TRAP", "TRUE", "TRYNEXT", "VAR", "VIEWONLY", "WHILE", 
      "WITH", "XOR", "STRING", "NUM", "MOVEABSJ", "MOVEC", "MOVEJ", "MOVEL", 
      "IDENTIFIER", "COMMENT", "WHITESPACE"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  rapidParserStaticData = std::move(staticData);
}

}

RapidParser::RapidParser(TokenStream *input) : RapidParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

RapidParser::RapidParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  RapidParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *rapidParserStaticData->atn, rapidParserStaticData->decisionToDFA, rapidParserStaticData->sharedContextCache, options);
}

RapidParser::~RapidParser() {
  delete _interpreter;
}

const atn::ATN& RapidParser::getATN() const {
  return *rapidParserStaticData->atn;
}

std::string RapidParser::getGrammarFileName() const {
  return "Rapid.g4";
}

const std::vector<std::string>& RapidParser::getRuleNames() const {
  return rapidParserStaticData->ruleNames;
}

const dfa::Vocabulary& RapidParser::getVocabulary() const {
  return rapidParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView RapidParser::getSerializedATN() const {
  return rapidParserStaticData->serializedATN;
}


//----------------- RapidModuleContext ------------------------------------------------------------------

RapidParser::RapidModuleContext::RapidModuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

RapidParser::ModuleDeclarationContext* RapidParser::RapidModuleContext::moduleDeclaration() {
  return getRuleContext<RapidParser::ModuleDeclarationContext>(0);
}

tree::TerminalNode* RapidParser::RapidModuleContext::EOF() {
  return getToken(RapidParser::EOF, 0);
}


size_t RapidParser::RapidModuleContext::getRuleIndex() const {
  return RapidParser::RuleRapidModule;
}


std::any RapidParser::RapidModuleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RapidVisitor*>(visitor))
    return parserVisitor->visitRapidModule(this);
  else
    return visitor->visitChildren(this);
}

RapidParser::RapidModuleContext* RapidParser::rapidModule() {
  RapidModuleContext *_localctx = _tracker.createInstance<RapidModuleContext>(_ctx, getState());
  enterRule(_localctx, 0, RapidParser::RuleRapidModule);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    moduleDeclaration();
    setState(89);
    match(RapidParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ModuleDeclarationContext ------------------------------------------------------------------

RapidParser::ModuleDeclarationContext::ModuleDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RapidParser::ModuleDeclarationContext::MODULE() {
  return getToken(RapidParser::MODULE, 0);
}

tree::TerminalNode* RapidParser::ModuleDeclarationContext::IDENTIFIER() {
  return getToken(RapidParser::IDENTIFIER, 0);
}

tree::TerminalNode* RapidParser::ModuleDeclarationContext::ENDMODULE() {
  return getToken(RapidParser::ENDMODULE, 0);
}

RapidParser::ModuleAttributeListContext* RapidParser::ModuleDeclarationContext::moduleAttributeList() {
  return getRuleContext<RapidParser::ModuleAttributeListContext>(0);
}

std::vector<RapidParser::DataDeclarationContext *> RapidParser::ModuleDeclarationContext::dataDeclaration() {
  return getRuleContexts<RapidParser::DataDeclarationContext>();
}

RapidParser::DataDeclarationContext* RapidParser::ModuleDeclarationContext::dataDeclaration(size_t i) {
  return getRuleContext<RapidParser::DataDeclarationContext>(i);
}

std::vector<RapidParser::RoutineDeclarationContext *> RapidParser::ModuleDeclarationContext::routineDeclaration() {
  return getRuleContexts<RapidParser::RoutineDeclarationContext>();
}

RapidParser::RoutineDeclarationContext* RapidParser::ModuleDeclarationContext::routineDeclaration(size_t i) {
  return getRuleContext<RapidParser::RoutineDeclarationContext>(i);
}


size_t RapidParser::ModuleDeclarationContext::getRuleIndex() const {
  return RapidParser::RuleModuleDeclaration;
}


std::any RapidParser::ModuleDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RapidVisitor*>(visitor))
    return parserVisitor->visitModuleDeclaration(this);
  else
    return visitor->visitChildren(this);
}

RapidParser::ModuleDeclarationContext* RapidParser::moduleDeclaration() {
  ModuleDeclarationContext *_localctx = _tracker.createInstance<ModuleDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 2, RapidParser::RuleModuleDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(91);
    match(RapidParser::MODULE);
    setState(92);
    match(RapidParser::IDENTIFIER);
    setState(94);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == RapidParser::T__0) {
      setState(93);
      moduleAttributeList();
    }
    setState(100);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (((((_la - 27) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 27)) & 19794439438337) != 0)) {
      setState(98);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
      case 1: {
        setState(96);
        dataDeclaration();
        break;
      }

      case 2: {
        setState(97);
        routineDeclaration();
        break;
      }

      default:
        break;
      }
      setState(102);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(103);
    match(RapidParser::ENDMODULE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ModuleAttributeListContext ------------------------------------------------------------------

RapidParser::ModuleAttributeListContext::ModuleAttributeListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<RapidParser::ModuleAttributeContext *> RapidParser::ModuleAttributeListContext::moduleAttribute() {
  return getRuleContexts<RapidParser::ModuleAttributeContext>();
}

RapidParser::ModuleAttributeContext* RapidParser::ModuleAttributeListContext::moduleAttribute(size_t i) {
  return getRuleContext<RapidParser::ModuleAttributeContext>(i);
}


size_t RapidParser::ModuleAttributeListContext::getRuleIndex() const {
  return RapidParser::RuleModuleAttributeList;
}


std::any RapidParser::ModuleAttributeListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RapidVisitor*>(visitor))
    return parserVisitor->visitModuleAttributeList(this);
  else
    return visitor->visitChildren(this);
}

RapidParser::ModuleAttributeListContext* RapidParser::moduleAttributeList() {
  ModuleAttributeListContext *_localctx = _tracker.createInstance<ModuleAttributeListContext>(_ctx, getState());
  enterRule(_localctx, 4, RapidParser::RuleModuleAttributeList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(105);
    match(RapidParser::T__0);
    setState(106);
    moduleAttribute();
    setState(111);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == RapidParser::T__1) {
      setState(107);
      match(RapidParser::T__1);
      setState(108);
      moduleAttribute();
      setState(113);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(114);
    match(RapidParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ModuleAttributeContext ------------------------------------------------------------------

RapidParser::ModuleAttributeContext::ModuleAttributeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RapidParser::ModuleAttributeContext::SYSMODULE() {
  return getToken(RapidParser::SYSMODULE, 0);
}

tree::TerminalNode* RapidParser::ModuleAttributeContext::NOVIEW() {
  return getToken(RapidParser::NOVIEW, 0);
}

tree::TerminalNode* RapidParser::ModuleAttributeContext::NOSTEPIN() {
  return getToken(RapidParser::NOSTEPIN, 0);
}

tree::TerminalNode* RapidParser::ModuleAttributeContext::VIEWONLY() {
  return getToken(RapidParser::VIEWONLY, 0);
}

tree::TerminalNode* RapidParser::ModuleAttributeContext::READONLY() {
  return getToken(RapidParser::READONLY, 0);
}


size_t RapidParser::ModuleAttributeContext::getRuleIndex() const {
  return RapidParser::RuleModuleAttribute;
}


std::any RapidParser::ModuleAttributeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RapidVisitor*>(visitor))
    return parserVisitor->visitModuleAttribute(this);
  else
    return visitor->visitChildren(this);
}

RapidParser::ModuleAttributeContext* RapidParser::moduleAttribute() {
  ModuleAttributeContext *_localctx = _tracker.createInstance<ModuleAttributeContext>(_ctx, getState());
  enterRule(_localctx, 6, RapidParser::RuleModuleAttribute);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(116);
    _la = _input->LA(1);
    if (!(((((_la - 53) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 53)) & 526469) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DataDeclarationContext ------------------------------------------------------------------

RapidParser::DataDeclarationContext::DataDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

RapidParser::DataTypeContext* RapidParser::DataDeclarationContext::dataType() {
  return getRuleContext<RapidParser::DataTypeContext>(0);
}

tree::TerminalNode* RapidParser::DataDeclarationContext::IDENTIFIER() {
  return getToken(RapidParser::IDENTIFIER, 0);
}

tree::TerminalNode* RapidParser::DataDeclarationContext::VAR() {
  return getToken(RapidParser::VAR, 0);
}

tree::TerminalNode* RapidParser::DataDeclarationContext::PERS() {
  return getToken(RapidParser::PERS, 0);
}

tree::TerminalNode* RapidParser::DataDeclarationContext::CONST() {
  return getToken(RapidParser::CONST, 0);
}

tree::TerminalNode* RapidParser::DataDeclarationContext::LOCAL() {
  return getToken(RapidParser::LOCAL, 0);
}

RapidParser::ArrayDimensionContext* RapidParser::DataDeclarationContext::arrayDimension() {
  return getRuleContext<RapidParser::ArrayDimensionContext>(0);
}

RapidParser::ExpressionContext* RapidParser::DataDeclarationContext::expression() {
  return getRuleContext<RapidParser::ExpressionContext>(0);
}


size_t RapidParser::DataDeclarationContext::getRuleIndex() const {
  return RapidParser::RuleDataDeclaration;
}


std::any RapidParser::DataDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RapidVisitor*>(visitor))
    return parserVisitor->visitDataDeclaration(this);
  else
    return visitor->visitChildren(this);
}

RapidParser::DataDeclarationContext* RapidParser::dataDeclaration() {
  DataDeclarationContext *_localctx = _tracker.createInstance<DataDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 8, RapidParser::RuleDataDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(119);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == RapidParser::LOCAL) {
      setState(118);
      match(RapidParser::LOCAL);
    }
    setState(121);
    _la = _input->LA(1);
    if (!(((((_la - 27) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 27)) & 17593259786241) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(122);
    dataType();
    setState(123);
    match(RapidParser::IDENTIFIER);
    setState(125);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == RapidParser::T__5) {
      setState(124);
      arrayDimension();
    }
    setState(129);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == RapidParser::T__3) {
      setState(127);
      match(RapidParser::T__3);
      setState(128);
      expression(0);
    }
    setState(131);
    match(RapidParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DataTypeContext ------------------------------------------------------------------

RapidParser::DataTypeContext::DataTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RapidParser::DataTypeContext::IDENTIFIER() {
  return getToken(RapidParser::IDENTIFIER, 0);
}


size_t RapidParser::DataTypeContext::getRuleIndex() const {
  return RapidParser::RuleDataType;
}


std::any RapidParser::DataTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RapidVisitor*>(visitor))
    return parserVisitor->visitDataType(this);
  else
    return visitor->visitChildren(this);
}

RapidParser::DataTypeContext* RapidParser::dataType() {
  DataTypeContext *_localctx = _tracker.createInstance<DataTypeContext>(_ctx, getState());
  enterRule(_localctx, 10, RapidParser::RuleDataType);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(133);
    match(RapidParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArrayDimensionContext ------------------------------------------------------------------

RapidParser::ArrayDimensionContext::ArrayDimensionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<RapidParser::ArrayDimExprContext *> RapidParser::ArrayDimensionContext::arrayDimExpr() {
  return getRuleContexts<RapidParser::ArrayDimExprContext>();
}

RapidParser::ArrayDimExprContext* RapidParser::ArrayDimensionContext::arrayDimExpr(size_t i) {
  return getRuleContext<RapidParser::ArrayDimExprContext>(i);
}


size_t RapidParser::ArrayDimensionContext::getRuleIndex() const {
  return RapidParser::RuleArrayDimension;
}


std::any RapidParser::ArrayDimensionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<RapidVisitor*>(visitor))
    return parserVisitor->visitArrayDimension(this);
  else
    return visitor->visitChildren(this);
}
